--- a/P6a/P6b.html
+++ b/P6a/P6b.html
@@ -10,16 +10,16 @@
 	<div>
 		<h1>Top 10 mis películas.</h1>
 		<ol>
-			<img src="LOTR-Comunidad.jpg" height="50px" width="50px"><li>La cominidad del anillo</li>
-			<img src="LOTR-Torres.jpg" height="50px" width="50px"><li>Las dos torres</li>
-			<img src="LOTR-Rey.jpg" height="50px" width="50px"><li>El retorno del rey</li>
-			<img src="DX.jpg" height="50px" width="50px"><li>Doctor extraño</li>
-			<img src="Guardianes.jpg" height="50px" width="50px"><li>Guardianes de la galaxia</li>
-			<img src="Muertos.jpg" height="50px" width="50px"><li>El amanecer de los muertos</li>
-			<img src="Juon.jpg" height="50px" width="50px"><li>Ju-on</li>
-			<img src="Pesadilla.jpg" height="50px" width="50px"><li>Pesadilla antes de navidad</li>
-			<img src="Piratas.jpg" height="50px" width="50px"><li>Piratas del Caribe</li>
-			<img src="Totoro" height="50px" width="50px"><li>Mi vecino Totoro</li>
+			<li><img src="LOTR-Comunidad.jpg" height="50px" width="50px" align="middle" hspace="5px">La cominidad del anillo</li><p></p>
+			<li><img src="LOTR-Torres.jpg" height="50px" width="50px" align="middle" hspace="5px">Las dos torres</li>
+			<li><img src="LOTR-Rey.jpg" height="50px" width="50px" align="middle" hspace="5px">El retorno del rey</li>
+			<li><img src="DX.jpg" height="50px" width="50px" align="middle" hspace="5px">Doctor extraño</li>
+			<li><img src="Guardianes.jpg" height="50px" width="50px" align="middle" hspace="5px">Guardianes de la galaxia</li>
+			<li><img src="Muertos.jpg" height="50px" width="50px" align="middle" hspace="5px">El amanecer de los muertos</li>
+			<li><img src="Juon.jpg" height="50px" width="50px" align="middle" hspace="5px">Ju-on</li>
+			<li><img src="Pesadilla.jpg" height="50px" width="50px" align="middle" hspace="5px">Pesadilla antes de navidad</li>
+			<li><img src="Piratas.jpg" height="50px" width="50px" align="middle" hspace="5px">Piratas del Caribe</li>
+			<li><img src="Totoro.jpg" height="50px" width="50px" align="middle" hspace="5px">Mi vecino Totoro</li>
 
 		</ol>	
 	</div>
